--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "prestart": "npm i && cd frontend && npm i && npm run build",
     "start": "cross-env NODE_ENV=production node server.js",
+    "dev-api": "nodemon server.js",
     "dev": "concurrently \"nodemon server.js\" \"cd frontend && npm start\""
   },
   "keywords": [],
