--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.9",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "socket.io": "^2.3.0",
+    "uuid": "^8.3.0",
     "validator": "^13.0.0",
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {
     "concurrently": "^5.1.0",
-    "nodemon": "^2.0.3"
+    "nodemon": "^2.0.4"
   }
 }
